<resources>
    <string name="app_name">Schnaps2gether</string>

    <string name="punktestand2">0</string>
    <string name="action_settings">Einstellungen</string>
    <string name="buttonE">geg. Karte</string>
    <string name="buttonI">mei. Karte</string>
    <string name="buttonZ">zudrehen</string>
    <string name="button20er">20er</string>
    <string name="button40er">40er</string>
    <string name="herz">Herz</string>
    <string name="karo">Karo</string>
    <string name="pik">Pik</string>
    <string name="kreuz">Kreuz</string>
    <string name="button1">Karte 1</string>
    <string name="button2">Karte 2</string>
    <string name="button3">Karte 3</string>
    <string name="button4">Karte 4</string>
    <string name="button5">Karte 5</string>
    <string name="title_activity_spielfeld3">Spielfeld3</string>
    <string name="title_activity_spielfeld4">Spielfeld4</string>
    <string name="spieler1">Ich</string>
    <string name="spieler2">Gegner</string>
    <string name="trumpf">Trumpf</string>
    <string name="deck">Deck</string>
    <string name="play_again">Nochmal spielen</string>
    <string name="exit">Beenden</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="title_activity_startmenu">Startmenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_startmenue">Startmenue</string>
    <string name="String">spielen</string>
    <string name="spielen">spielen</string>
    <string name="name">name ändern</string>
    <string name="statistik">Statistik</string>
    <string name="beenden">beenden</string>
    <string name="spielregeln">Spielregeln</string>
    <string name="optionen">optionen</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="neu">Neues Spiel</string>
    <string name="beitreten">Spiel beitreten</string>
    <string name="abbrechen">abbrechen</string>
    <string name="title_activity_neues_spiel">NeuesSpiel</string>
    <string name="AnzahlSpieler">Anzahl Spieler</string>
    <string name="zwei">2</string>
    <string name="drei">3</string>
    <string name="vier">4</string>
    <string name="Spielstarten">Spiel starten</string>
    <string name="TrumpAustauschen">Trumpf austauschen</string>
    <string name="no_game_available">no game available</string>
    <string name="service_id">appsolutegamesgmbh.schnaps2gether.service</string>
    <string name="zweier">Zweier</string>
    <string name="dreier">Dreier</string>
    <string name="vierer">Vierer</string>
    <string name="Beenden">Beenden</string>
    <string name="weiter">Weiter</string>
    <string name="schnapser">Schnapser</string>
    <string name="land">Land</string>
    <string name="kontraschnapser">Kontraschnapser</string>
    <string name="bauernschnapser">Bauernschnapser</string>
    <string name="kontrabauernschnapser">Kontrabauernschnapser</string>
    <string name="farbenjodler">Farbenjodler</string>
    <string name="herrenjodler">Herrenjodler</string>
    <string name="aufdrehen">Aufdrehen</string>
    <string name="flecken">Flecken</string>
    <string name="gegenflecken">Gegenflecken</string>
    <string name="rufspiel">Spiel rufen</string>
    <string name="bummerl">Bummerln:</string>
    <string name="schnellesSpiel">Schnelles Spiel</string>
    <string name="kartenSchauen">Schummeln</string>
    <string name="s2g_logo">Schnaps2gether Logo</string>
    <string name="kartenSehen">Gegner in die Karten sehen</string>
    <string name="trumpfansagen">Trumpf</string>
    <string name="title_activity_activity_spielregeln">activity_spielregeln</string>
    <string name="tauschen">Tauschen</string>
    <string name="karte1">Karte 1</string>
    <string name="karte2">Karte 2</string>
    <string name="karte3">Karte 3</string>
    <string name="karte4">Karte 4</string>
    <string name="karte5">Karte 5</string>
    <string name="karte6">Karte 6</string>
    <string name="trumpfIcon">Trumpf Icon</string>
    <string name="trumpfKarte">Trumpfkarte</string>
    <string name="stich11">Stichkarte 11</string>
    <string name="stich16">Stichkarte 16</string>
    <string name="stich15">Stichkarte 15</string>
    <string name="stich12">Stichkarte 12</string>
    <string name="stich10">Stichkarte 10</string>
    <string name="stich9">Stichkarte 9</string>
    <string name="stich8">Stichkarte 8</string>
    <string name="stich7">Stichkarte 7</string>
    <string name="stich6">Stichkarte 6</string>
    <string name="stich5">Stichkarte 5</string>
    <string name="stich4">Stichkarte 4</string>
    <string name="stich3">Stichkarte 3</string>
    <string name="stich2">Stichkarte 2</string>
    <string name="stich1">Stichkarte 1</string>
    <string name="talon2">Talonkarte 2</string>
    <string name="talon1">Talonkarte 1</string>
    <string name="karteG2">Karte Gegner 2</string>
    <string name="karteG1">Karte Gegner 1</string>
    <string name="KarteI">Karte Gegner 1</string>
    <string name="stich13">Stichkarte 13</string>
    <string name="stich14">Stichkarte 14</string>


</resources>
