<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="appsolutegamesgmbh.schnaps2gether.GUI.NeuesSpiel">

    <TextView android:text="@string/AnzahlSpieler" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_anzahlSpieler"
        android:textIsSelectable="true"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zwei"
        android:id="@+id/button"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:layout_below="@+id/lbl_anzahlSpieler"
        android:layout_toLeftOf="@+id/lbl_anzahlSpieler"
        android:layout_toStartOf="@+id/lbl_anzahlSpieler" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drei"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="neu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vier"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/lbl_anzahlSpieler"
        android:layout_toEndOf="@+id/lbl_anzahlSpieler"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbrechen"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
