<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Spielfeld"
    android:gravity="center_vertical"
    android:background="@drawable/holz_hintergrund">

    <TextView
        android:id="@+id/pointsText"
        android:text="@string/punktestand2" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#aa00aa" />
    <TextView
        android:id="@+id/Enemy"
        android:text="@string/spieler2" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#aa00aa" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/main_buttonD"
            android:text="@string/deck"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="start"
            android:enabled="false" />
        <TextView
            android:id="@+id/Deck"
            android:text="@string/deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="#0066cc"
            android:enabled="true"
            android:textSize="@dimen/abc_text_size_medium_material" />
    <!--    <Button
        android:id="@+id/main_buttonE"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="85dp"
        android:text="@string/buttonE"
        android:layout_gravity="center"
        android:enabled="false" />-->

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButtonE"
            android:enabled="false"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/cmd_1K_G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:text="@string/button1"
            android:onClick="popup20er"
            android:visibility="invisible" />

        <Button
            android:id="@+id/cmd_2K_G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button2"
            android:onClick="ansagen40er"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="New Button"
            android:id="@+id/cmd_gestochen_G"
            android:visibility="invisible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--<Button-->
            <!--android:id="@+id/main_buttonT"-->
            <!--android:text="@string/trumpf"-->
            <!--android:layout_width="105dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="0dp"-->
            <!--android:layout_marginLeft="0dp"-->
            <!--android:layout_gravity="left"-->
            <!--android:enabled="false"  />-->

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButtonT"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/Trumpf"
            android:text="@string/trumpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="#0066cc"
            android:textSize="@dimen/abc_text_size_medium_material" />
        <!--<Button
        android:id="@+id/main_buttonI"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="68dp"
        android:text="@string/buttonI"
        android:layout_gravity="center"
        android:enabled="false" />-->

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButtonI"
            android:layout_gravity="left|bottom"
            android:enabled="false"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/main_buttonZ"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="60dp"
            android:text="@string/buttonZ"
            android:layout_gravity="right"
            android:onClick="zudrehen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <!--<Button
            android:id="@+id/main_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button1"
            android:onClick="karte1OnClick"/>
        <Button
            android:id="@+id/main_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button2"
            android:onClick="karte2OnClick" />
        <Button
            android:id="@+id/main_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button3"
            android:onClick="karte3OnClick" />
        <Button
            android:id="@+id/main_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button4"
            android:onClick="karte4OnClick" />-->
        <!--<Button-->
            <!--android:id="@+id/main_button5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginLeft="0dp"-->
            <!--android:text="@string/button5"-->
            <!--android:onClick="karte5OnClick" />-->

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButton1"
            android:layout_gravity="top|right"
            android:onClick="karte1OnClick"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButton2"
            android:onClick="karte2OnClick"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButton3"
            android:layout_gravity="right"
            android:onClick="karte3OnClick"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButton4"
            android:layout_gravity="center_horizontal"
            android:onClick="karte4OnClick"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/main_imageButton5"
            android:layout_gravity="center_horizontal"
            android:onClick="karte5OnClick"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/main_buttonTtauschen"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:text="@string/TrumpAustauschen"
            android:onClick="trumpfkarteTauschen" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/I"
                android:text="@string/spieler1" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#aa00aa" />
            <TextView
                android:id="@+id/pointsText2"
                android:text="@string/punktestand2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#aa00aa" />
        </LinearLayout>
        <Button
            android:id="@+id/main_button20er"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:text="@string/button20er"
            android:onClick="popup20er" />
        <Button
            android:id="@+id/main_button40er"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button40er"
            android:onClick="ansagen40er" />

        <Button
            android:id="@+id/cmd_1K_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:text="@string/button1"
            android:onClick="popup20er"
            android:visibility="invisible" />

        <Button
            android:id="@+id/cmd_2K_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:text="@string/button2"
            android:onClick="ansagen40er"
            android:visibility="invisible" />

        <Button
            android:layout_width="54dp"
            android:layout_height="34dp"
            android:text="New Button"
            android:id="@+id/cmd_gestochen_I"
            android:visibility="invisible" />
    </LinearLayout>


</LinearLayout>
