<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GUI.Lobby"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:text="Lobby - Warteraum"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/listView_Spieluebersicht"
        android:visibility="visible"
        style="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:fastScrollEnabled="true"
        android:fastScrollAlwaysVisible="true"
        android:focusable="false"
        android:layout_above="@+id/cmd_neu"
        android:layout_alignRight="@+id/cmd_abbrechen"
        android:layout_alignEnd="@+id/cmd_abbrechen"
        android:minHeight="170dp"
        android:layout_weight="1.97" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation ="horizontal"
        android:minHeight="50dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neu"
            android:id="@+id/cmd_neu"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="neu" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beitreten"
            android:id="@+id/cmd_beitreten"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/cmd_neu"
            android:layout_toEndOf="@+id/cmd_neu"
            android:onClick="beitreten"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abbrechen"
            android:id="@+id/cmd_abbrechen"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        </LinearLayout>

</LinearLayout>
